--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -38,7 +38,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "dev.aluc.pdf_text_example"
+        applicationId "com.pexelle.pdfText_example"
         minSdkVersion 16
         targetSdkVersion 28
         multiDexEnabled true
